maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: not found: value esSurBiscuit
  while ( !esSurBiscuit() ){
           ^JediEscaper:86: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if ( !aMurNord() ){
                ^JediEscaper:89: error: not enough arguments for method aMurSud: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if ( !aMurSud() ){
               ^JediEscaper:92: error: not enough arguments for method aMurEst: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if ( !aMurEst() ){
               ^JediEscaper:95: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if ( !aMurOuest() ){
                 ^